@@ -16,6 +16,7 @@
 # Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 
+require 'boxgrinder-core/helpers/log-helper'
 require 'yaml'
 
 module BoxGrinder
@@ -32,14 +33,13 @@ module BoxGrinder
   end
 
   class RPMDependencyValidator
-    def initialize( config, appliance_config, dir, kickstart_file, options = {} )
+    def initialize( config, appliance_config, dir, options = {} )
       @config           = config
       @appliance_config = appliance_config
-      @kickstart_file   = kickstart_file
       @dir              = dir
 
-      @log          = options[:log]         || Logger.new(STDOUT)
-      @exec_helper  = options[:exec_helper] || ExecHelper.new( { :log => @log } )
+      @log          = options[:log]         || LogHelper.new
+      @exec_helper  = options[:exec_helper] || ExecHelper.new( :log => @log )
 
       @yum_config_file = "#{@dir.tmp}/yum.conf"
 
@@ -51,18 +51,15 @@ module BoxGrinder
     def resolve_packages
       @log.info "Resolving packages added to #{@appliance_config.name} appliance definition file..."
 
-      repos = read_repos_from_kickstart_file
       package_list = generate_package_list
-      repo_list = generate_repo_list( repos )
+      generate_yum_config
 
-      generate_yum_config( repos )
+      invalid = invalid_names( @appliance_config.repos, package_list )
 
-      invalid_names = invalid_names( repo_list, package_list )
-
-      if invalid_names.size == 0
+      if invalid.empty?
         @log.info "All additional packages for #{@appliance_config.name} appliance successfully resolved."
       else
-        raise "Package#{invalid_names.size > 1 ? "s" : ""} #{invalid_names.join(', ')} for #{@appliance_config.name} appliance not found in repositories. Please check package names in appliance definition file."
+        raise "Package#{invalid.size > 1 ? "s" : ""} #{invalid.join(', ')} for #{@appliance_config.name} appliance not found in repositories. Please check package names in appliance definition file."
       end
     end
 
@@ -75,7 +72,7 @@ module BoxGrinder
         arches = "x86_64"
       end
 
-      repoquery_output = @exec_helper.execute( "repoquery --quiet --disablerepo=* --enablerepo=#{repo_list} -c '#{@yum_config_file}' list available #{package_list.join( ' ' )} --nevra --archlist=#{arches},noarch" )
+      repoquery_output = @exec_helper.execute( "repoquery --quiet --disablerepo=* --enablerepo=#{@appliance_config.repos.collect {|r| "#{@magic_hash}#{r['name']}"}.join(",")} -c '#{@yum_config_file}' list available #{package_list.join( ' ' )} --nevra --archlist=#{arches},noarch" )
 
       invalid_names = []
 
@@ -106,44 +103,16 @@ module BoxGrinder
       packages
     end
 
-    def generate_repo_list(repos)
-      repo_list = ""
-
-      repos.each do |repo|
-        repo_list += "#{@magic_hash}#{repo.name},"
-      end
-
-      repo_list = repo_list[0, repo_list.length - 1]
-    end
-
-    def read_repos_from_kickstart_file
-      repos = `grep -e "^repo" '#{@kickstart_file}'`
-      repo_list = []
-
-      repos.each do |repo_line|
-        name = repo_line.match( /--name=([\w\-]+)/ )[1]
-        baseurl = repo_line.match( /--baseurl=([\w\-\:\/\.&\?=]+)/ )
-        mirrorlist = repo_line.match( /--mirrorlist=([\w\-\:\/\.&\?=]+)/ )
-
-        baseurl = baseurl[1] unless baseurl.nil?
-        mirrorlist = mirrorlist[1] unless mirrorlist.nil?
-
-        repo_list.push( Repo.new( name, baseurl, mirrorlist ) )
-      end
-
-      repo_list
-    end
-
-    def generate_yum_config( repo_list )
+    def generate_yum_config
       File.open( @yum_config_file, "w") do |f|
 
         f.puts( "[main]\r\ncachedir=#{Dir.pwd}/#{@dir.tmp}/#{@magic_hash}#{@appliance_config.hardware.arch}-yum-cache/\r\n\r\n" )
 
-        for repo in repo_list
-          f.puts( "[#{@magic_hash}#{repo.name}]" )
-          f.puts( "name=#{repo.name}" )
-          f.puts( "baseurl=#{repo.baseurl}" ) unless repo.baseurl.nil?
-          f.puts( "mirrorlist=#{repo.mirrorlist}" ) unless repo.mirrorlist.nil?
+        for repo in @appliance_config.repos
+          f.puts( "[#{@magic_hash}#{repo['name']}]" )
+          f.puts( "name=#{repo['name']}" )
+          f.puts( "baseurl=#{repo['baseurl']}" ) unless repo['baseurl'].nil?
+          f.puts( "mirrorlist=#{repo['mirrorlist']}" ) unless repo['mirrorlist'].nil?
           f.puts( "enabled=1" )
           f.puts
         end
