@@ -1,6 +1,7 @@
 v0.9.3
 
 * [BGBUILD-232] boxgrinder doesn't validate config early enough
+* [BGBUILD-237] Tilde characters break creation of yum.conf
 
 v0.9.2
 
